<resources>
    <string name="app_name">FaceMorph</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_description">The logo of the FaceMorph application</string>
    <string name="test">Test</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="signup">signup</string>
    <string name="camera_button">Camera button</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="gallery">Gallery</string>
    <string name="initializing">Initializing</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="erase_my_data">Erase my data</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="preview">Preview</string>
    <string name="continue_with_gallery">Continue with Gallery</string>
    <string name="continue_with_camera">Continue with Camera</string>
    <string name="continue_with_bluetooth">Continue with Bluetooth</string>
    <string name="join">Join</string>
    <string name="host">Host</string>
    <string name="cancel">Cancel</string>
    <string name="result">Result</string>
    <string name="select_from_storage">Select from storage</string>
</resources>