<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.preview.PreviewFragment">

    <ImageView
        android:id="@+id/small_logo_preview"
        android:layout_height="72dp"
        android:layout_width="72dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_preview"
        android:contentDescription="@string/logo_description"
        app:tint="@color/purple_500">
    </ImageView>

    <TextView
        android:id="@+id/preview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preview"
        android:textColor="@color/purple_500"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textSize="42sp"
        app:layout_constraintTop_toBottomOf="@id/small_logo_preview">
    </TextView>

    <ImageView
        android:id="@+id/preview_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preview_title"
        app:layout_constraintBottom_toTopOf="@id/continue_with_gallery"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp">
    </ImageView>

    <Button
        android:id="@+id/continue_with_bluetooth"
        android:layout_width="0dp"
        android:layout_height="54dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/blue"
        android:text="@string/continue_with_bluetooth"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        >

    </Button>

    <Button
        android:id="@+id/continue_with_camera"
        android:layout_width="0dp"
        android:layout_height="54dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/continue_with_bluetooth"
        android:text="@string/continue_with_camera"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        >
    </Button>

    <Button
        android:id="@+id/continue_with_gallery"
        android:layout_width="0dp"
        android:layout_height="54dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/continue_with_camera"
        android:text="@string/continue_with_gallery"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        >

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>