<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/purple_500"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.settings.SettingsFragment">

    <ProgressBar
        android:id="@+id/settings_progress_bar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/small_logo_settings"
        android:layout_height="72dp"
        android:layout_width="72dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_list"
        android:contentDescription="@string/logo_description"
        app:tint="@color/white">
    </ImageView>

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:textSize="42sp"
        app:layout_constraintTop_toBottomOf="@id/small_logo_settings">

    </TextView>

    <Button
        android:id="@+id/erase_data_button"
        android:layout_width="0dp"
        android:layout_height="54dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/erase_my_data"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        >

    </Button>

    <Button
        android:id="@+id/quit_button"
        android:layout_width="0dp"
        android:layout_height="54dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/erase_data_button"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:text="@string/quit"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        >

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>