<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.bluetooth.BluetoothFragment">

    <Button
        android:id="@+id/exit_bluetooth_button"
        android:layout_width="0dp"
        android:layout_height="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/cancel"
        android:background="@drawable/button_progress"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        >

    </Button>

    <!--
    <Button
        android:id="@+id/select_from_gallery_button"
        android:layout_width="0dp"
        android:layout_height="54dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/host_button"
        android:text="@string/select_from_gallery"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        >

    </Button>
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:weightSum="2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/exit_bluetooth_button"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp">

        <Button
            android:id="@+id/host_button"
            android:layout_width="wrap_content"
            android:text="@string/host"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/blue"
            android:layout_height="54dp"
            android:layout_weight="1">

        </Button>

        <Button
            android:id="@+id/join_button"
            android:layout_width="wrap_content"
            android:text="@string/join"
            android:layout_height="54dp"
            android:backgroundTint="@color/blue"
            android:layout_weight="1"
            android:layout_marginStart="8dp">

        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>