<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/purple_500"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.login.LoginFragment">

    <ProgressBar
        android:id="@+id/gallery_progress_bar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/small_logo_gallery"
        android:layout_height="72dp"
        android:layout_width="72dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_gallery"
        android:contentDescription="@string/logo_description"
        app:tint="@color/white">
    </ImageView>

    <TextView
        android:id="@+id/gallery_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:textSize="42sp"
        app:layout_constraintTop_toBottomOf="@id/small_logo_gallery">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gallery_recycler_view"
        android:backgroundTint="#00000000"
        android:background="#00000000"
        app:layout_constraintTop_toBottomOf="@id/gallery_title"
        app:layout_constraintBottom_toTopOf="@id/add_a_photo_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="16dp"
        android:layout_height="0dp"
        android:layout_width="0dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/add_a_photo_button"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="@color/black"
        android:text="@string/select_from_storage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>